# RAG-learning

./: .gitignore  AGENTS.md  README.md  claude-progress.md  feature_list.json  init.sh  pyproject.toml  requirements.txt
AgenticRAG/: AgenticRAG论文汇总.md  demo.py
Experiment/: Batnet.py
Experiment/LongRuiGame/: README.md  env_and_deps.md  game_faq.json  tool_templates.py
Experiment/LongRuiGame/scene1_player_qa/: player_qa_agent.py  qa_log.jsonl  设计思路.txt
Experiment/NanoBat/: .env.example  README.md  main.py  requirements.txt
Experiment/NanoBat/skills/: README.md
Experiment/NanoBat/src/: __init__.py  agent.py  db.py
Experiment/NanoBob/: .env.example  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  setup.sh  test-api.cjs  tsconfig.json
Experiment/Obsidian/: obsidian_agent.py  obsidian_loader.py
Foundations/RAG-Primer/: README.md  TUTORIAL.md  _common.py
Frameworks/LangGraph/: 05_ConditionalGraph.py
HyDE/: README.md  demo.py
LangGraph/Offcial_Tutorial/: 00_quickstart.py  01_StructedOutputSchema.py  02_Parallelization.py  03_ Routing.py  05_Evaluator-optimizer.py  05_Orchestrator2.py  07_PersonalAssistants.py  08_PersonalAssistants_Ollama.py
Projects/MultiLevelRAG/: .env.example  .gitignore  README.md  app.py  config.py  knowledge_loader.py  requirements.txt  router.py
Projects/RAGAS-Learning/: AGENTS.md  CLAUDE.md  claude-progress.md  demo_faithfulness.py  feature_list.json  init.sh  session-handoff.md  tutorial.html
RAG-Techniques/: RAG范式总览.md
RAGFusion/: 02_rrf_algorithm.py  03_rag_fusion_pipeline.py  README.md
(+74 files in other folders)
